setting up stripe configsfor payments
